<resources>
    <string name="app_name">InstaMonitor</string>
    <string name="title_activity_1">Activity1</string>
    <string name="title_activity_2">Activity2</string>
    <string name="title_activity_3">Activity3</string>

    <string name="activity_2_text">This activity is ignored</string>
    <string name="fragment_1_text">Hello FRAGMENT 1</string>
    <string name="fragment_2_text">The timer is counting</string>
    <string name="fragment_3_text">The third and last fragment</string>
    <string name="ignore_activity">Ignore Activity</string>
    <string name="ignore_activity_on">(Time spent in this activity is ignored)</string>
    <string name="ignore_activity_off">(Time spent in this activity is included)</string>

    <string name="start_activity1">Activity1</string>
    <string name="start_activity2">Activity2</string>
    <string name="start_activity3">Activity3</string>
    <string name="button_clear_data">CLEAR DATA</string>
    <string name="button_view_stats">View Stats</string>
    <string name="start">Start</string>
    <string name="total_time">Total time = %d ms</string>
    <string name="no_data">No data available</string>
</resources>
